# smartsystema

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json
.github/workflows/: deploy-vps.yml  windows-desktop.yml
apps/api/: drizzle.config.ts  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/agent/: mod.rs
apps/desktop/src-tauri/src/command_bus/: executor.rs  mod.rs  queue.rs
apps/desktop/src-tauri/src/integrations/: epf_runner.rs  metadata.rs  mod.rs  odata.rs  readiness_report.rs  thin_client.rs  windows_com.rs  write_package.rs
apps/desktop/src-tauri/src/queue/: mod.rs
apps/desktop/src-tauri/src/security/: mod.rs  native_auth.rs
apps/desktop/src-tauri/src/telemetry/: mod.rs
docs/: 1c-integration.md  README.md  agent-command-bus.md  ai-ocr-mapping.md  ai-recognition-agents.md  api-contracts.md  architecture.md  auth-native-app.md  backend-nestjs.md  context.md  data-governance.md  deployment-release.md  domain-model.md  entity-resolution.md  forbidden-actions.md  jobs-queues.md  mvp-roadmap.md  observability.md  persistence-migrations.md  references.md  review-workflow.md  rust-system.md  security.md  structure.md  tauri-rust-agent.md  testing.md
infra/: README.md  docker-compose.yml
scripts/: README.md  check-module-function-coverage.mjs  deploy-vps.sh  start-mac-backend-for-windows-preview.sh
(+109 files in other folders)
