[package]
name = "automator-desktop"
version = "0.1.0"
description = "SmartSistema local desktop-agent"
authors = ["SmartSistema"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "automator_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Com"] }
